hdparm-9.27
	- repackaged again with wiper-2.5
	- wiper.sh updated to wiper-2.3
	- fix definition of reg_flags in sgio.h to work with old IDE drivers again
hdparm-9.26
	- wiper.sh updated to wiper-2.2
	- zero-day bugfix for "hdparm -i" on model names with embedded blanks
	- bugfix for --security-erase-enhanced, courtesy of Cyril.Guyot@hitachigst.com
	- set _FILE_OFFSET_BITS in geom.c (still need to do this in hdparm.c someday)
	- added reporting for "Deterministic read ZEROs after TRIM" feature
hdparm-9.25
	- slightly tidier output from --trim-* commands
	- restrict --trim-sector-ranges-stdin to limit from /sys/block/sd?/queue/max_sectors_kb
	- updated wiper.sh to use --trim-sector-ranges-stdin rather than --trim-sector-ranges
hdparm-9.24
	- fixed malloc() bug in --trim-sector-ranges: it was allocating half the required size (oops).
hdparm-9.23
	- minor cosmetic changes in fibmap.c
	- added --trim-sector-ranges-stdin for wiper.sh-2.0
	- tightened up excess-args checking on a number of flags
	- added name to version line
hdparm-9.22
	- added fsync() call inside --fallocate
	- fixed fibmap.c to work around an observed ext4 bug with FIEMAP's "LAST" flag
	- added detailed comments to wiper.sh
	- more rework of wiper.sh, added xfs support, added generic online support
	- twiddled the code in geom.c slightly
	- cosmetic changes in fibmap.c and the manpage description of --fibmap
	- added kernel patch for compat_ioctl::fiemap support
hdparm-9.21
	- fixes and (big) speedups to wiper.sh (v1.2) script
hdparm-9.20
	- unified the online/offline wiper scripts into a single wiper.sh script
	- fixed bug whereby the wiper scripts generated command-lines too long for bash
	- fixed non-zero exit status from successful --trim-sector-ranges
	- reimplemented --trim-sector-ranges to use sg16() directly, with aligned data
	- allow wiper scripts to issue TRIM with up to 255 sectors of LBA-range data
	- added kernel patch file for sil24 protocol fix, needed for wiper/TRIM