@@ -1,8 +1,9 @@
 Begin4
 Title:		hdparm
-Version:	9.27
-Entered-date:	2009-09-01
+Version:	9.28
+Entered-date:	2010-03-09
 Description:	hdparm - get/set hard disk parameters for Linux SATA/IDE drives.
+		v9.28 Assorted fixes, updated wiper.sh to v2.8
 		v9.27 Fix compatibility with old IDE drivers; was broken for many versions now
 		v9.26 Fix old -i model-name bug; fixed --security-erase-enhanced; other fixes
 		v9.25 Limit --trim-sector-ranges-stdin to max_sectors_kb per TRIM command
@@ -101,7 +102,7 @@ Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	http://sourceforge.net/projects/hdparm/
 Alternate-site:	http://www.ibiblio.org/pub/Linux/system/hardware
-		112K hdparm-9.27.tar.gz
+		114K hdparm-9.28.tar.gz
 		4K hdparm.lsm
 Platforms:	Linux, kernels 2.2 through 2.6
 Copying-policy:	BSD License
